# imgui_bundle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BasicInteraction.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FAQ.md  LICENSE  README.md  Readme.adoc  Readme.md  Readme_devel.md  autogenerate_hello_imgui.py  claude.md  demos_python  doc  fight_wheels.md  hello_imgui_amalgamation.h  hello_imgui_example.ini  imgui_bundle  justfile  litgen_imconfig.h  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  wheels_dev_notes.md
_example_integration/: CMakeLists.txt  Readme.adoc  Readme.md  hello_world.cpp  hello_world.main.cpp
_example_integration/assets/app_settings/emscripten/: shell.emscripten.html
bindings/imgui_bundle/demos_cpp/: CMakeLists.txt  coi-serviceworker.js  demo_all.cpp  demo_im_anim.cpp  demo_imgui_bundle.cpp  demo_imgui_bundle_intro.cpp  demo_imgui_md.cpp  demo_imgui_show_demo_window.cpp  demo_imguizmo_launcher.cpp  demo_immapp_launcher.cpp  demo_immapp_notebook.cpp  demo_immvision_launcher.cpp  demo_implot.cpp  demo_logger.cpp  demo_nanovg_launcher.cpp  demo_node_editor_launcher.cpp  demo_tex_inspect_launcher.cpp  demo_text_edit.cpp  demo_themes.cpp  demo_widgets.cpp  demo_widgets_docking.cpp  demo_widgets_old.cpp  msvc_note.txt
bindings/imgui_bundle/demos_cpp/_auto_main/: _auto_main.cpp  _auto_main.cpp.in
bindings/imgui_bundle/demos_cpp/demo_command_palette/: CMakeLists.txt  demo_command_palette.cpp
bindings/imgui_bundle/demos_cpp/demo_haiku_implot_heart/: demo_haiku_implot_heart.main.cpp
bindings/imgui_bundle/demos_cpp/demo_imgui_node_editor/: demo_imgui_node_editor.main.cpp
bindings/imgui_bundle/demos_cpp/demo_powersave/: demo_powersave.main.cpp
bindings/imgui_bundle/demos_cpp/demo_texteditor/: CMakeLists.txt
bindings/imgui_bundle/demos_cpp/demo_utils/: CMakeLists.txt  animate_logo.cpp  animate_logo.h  api_demos.cpp  api_demos.h  code_str_utils.h  demo_app_table.cpp  demo_app_table.h  immvision_make_test_suite.cpp  subprocess.h
bindings/imgui_bundle/demos_cpp/demo_widgets_docking/: demo_widgets_docking.main.cpp
bindings/imgui_bundle/demos_cpp/demos_imanim/: CMakeLists.txt  demo_imanim_basics.cpp  demo_imanim_simple.cpp
bindings/imgui_bundle/demos_cpp/demos_imguizmo/: CMakeLists.txt  demo_gizmo.cpp  demo_gizmo_pure.cpp  demo_guizmo_curve_edit.cpp  demo_guizmo_gradient.cpp  demo_guizmo_sequencer.cpp  demo_guizmo_sequencer.draft_cpp  demo_guizmo_zoom_slider.cpp
bindings/imgui_bundle/demos_cpp/demos_immapp/: CMakeLists.txt  coi-serviceworker.js  demo_apps.cpp  demo_assets.cpp  demo_assets_addons.cpp  demo_chinese_font.cpp  demo_command_palette.cpp  demo_custom_background.cpp  demo_custom_font.cpp  demo_docking.cpp  demo_drag_and_drop.cpp  demo_font_common_glyph_range.cpp  demo_hello_world.cpp  demo_implot_markdown.cpp  demo_logger.cpp  demo_parametric_curve.cpp  demo_powersave.cpp  demo_testapp.cpp  demo_testengine.cpp  haiku_butterfly.cpp  haiku_implot_heart.cpp  imgui_example_glfw_opengl3.cpp  imgui_example_glfw_opengl3.obsolete.cpp  shell.emscripten.html
bindings/imgui_bundle/demos_cpp/demos_immvision/: CMakeLists.txt  demo_contours.cpp  demo_immvision_display.cpp  demo_immvision_inspector.cpp  demo_immvision_link.cpp  demo_immvision_process.cpp  demo_immvision_rendering_test.cpp
bindings/imgui_bundle/demos_cpp/demos_nanovg/: CMakeLists.txt  demo_nanovg_example_gl3.cpp  demo_nanovg_full.cpp  demo_nanovg_heart.cpp  shell.emscripten.html
bindings/imgui_bundle/demos_cpp/demos_node_editor/: CMakeLists.txt  demo_imgui_node_editor.cpp  demo_node_editor_basic.cpp  demo_romeo_and_juliet.cpp
bindings/imgui_bundle/demos_cpp/demos_tex_inspect/: CMakeLists.txt  demo_tex_inspect.main.cpp  demo_tex_inspect_demo_window.cpp  (+1 more)
demos_cpp/: CMakeLists.txt  demos_interface.h
demos_cpp/demo_composition_graph/: CMakeLists.txt  demo_compose_add.main.cpp  demo_compose_image.main.cpp
demos_cpp/demo_composition_graph/functions_composition_graph/: CMakeLists.txt  cv_color_type.cpp  functions_composition_graph.cpp  functions_composition_graph.h  image_with_gui.cpp  image_with_gui.h
demos_cpp/demo_haiku_implot_heart/: CMakeLists.txt  demo_haiku_implot_heart.main.cpp
demos_cpp/demo_imgui_node_editor/: CMakeLists.txt
demos_cpp/demo_implot_markdown/: CMakeLists.txt  demo_implot_markdown.main.cpp
demos_cpp/demo_powersave/: CMakeLists.txt  demo_powersave.main.cpp
demos_cpp/demo_texteditor/: CMakeLists.txt  demo_texteditor.main.cpp
demos_cpp/demo_utils/: CMakeLists.txt  api_demos.cpp  code_str_utils.cpp  demo_utils.h
demos_cpp/demo_widgets_docking/: CMakeLists.txt  demo_widgets_docking.main.cpp  imgui_basic_widgets.cpp
demos_cpp/demos_imguizmo/: CMakeLists.txt  demo_gizmo.cpp  demo_guizmo.main.cpp  demo_guizmo_curve_edit.cpp  demo_guizmo_curve_edit.main.cpp  demo_guizmo_gradient.cpp  demo_guizmo_gradient.main.cpp  demo_guizmo_pure.cpp  demo_guizmo_pure.main.cpp  demo_guizmo_sequencer.main.cpp  demo_guizmo_stl.main.cpp  demo_guizmo_zoom_slider.main.cpp  demos_interface.h
demos_cpp/demos_immvision/: CMakeLists.txt  demo_immvision_display.cpp  demo_immvision_inspector.cpp  test_immvision.cpp
demos_cpp/demos_tex_inspect/: CMakeLists.txt  demo_tex_inspect.main.cpp
demos_cpp/haiku_implot_heart/: CMakeLists.txt  haiku_implot_heart.main.cpp
demos_cpp/imfiledialog_test/: CMakeLists.txt  imfiledialog_test.main.cpp
demos_cpp/imgui_md_test/: CMakeLists.txt  imgui_md_test.main.cpp
demos_cpp/imgui_node_editor_test/: CMakeLists.txt
demos_cpp/texteditor_test/: CMakeLists.txt  texteditor_test.main.cpp
imgui_manual/: .gitignore  CMakeLists.txt  demo_code_viewer.cpp  demo_code_viewer.h  demo_him_plan.md  imgui_demo_marker_hooks.cpp  imgui_demo_marker_hooks.h  imgui_manual.cpp  imgui_manual.h  imgui_manual.main.cpp  justfile  library_config.cpp  library_config.h
imgui_manual/markers_scripts_old/: add_python_markers_matching_cpp.py
imgui_manual/src/: imgui_manual.cpp
pybind_native_debug/: .gitignore  CMakeLists.txt  Readme.md  pybind_native_debug.cpp  pybind_native_debug.py  pybind_native_debug_venv.txt.example
(+1307 files in other folders)
